wwwroot/css/site-layout.css
body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
    margin: 0;
    padding: 0;
}

.wrapper {
    display: flex;
    flex: 1;
}

.sidebar {
    width: 250px;
    background-color: #292828;
    padding: 10px;
    color: #fff;
}

.content {
    flex: 1;
    padding: 20px;
}

.sidebar a {
    display: block;
    padding: 10px;
    color: #fff;
    text-decoration: none;
}

    .sidebar a:hover {
        background-color: #444;
        color: #fff;
    }

.dropdown-menu {
    background-color: #3b3b3b;
    border: 1px solid #6c757d;
    border-radius: 6px; /* esquinas redondeadas */
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* sombra sutil */
}

    .dropdown-menu a {
        color: #fff;
        text-decoration: none;
    }

        .dropdown-menu a:hover {
            background-color: #444;
            color: #fff;
        }

.footer {
    background-color: #f8f9fa;
    padding: 10px;
    text-align: center;
}

.navbar {
    background-color: #1B4D7F;
    margin: 0;
}

.navbar-brand {
    display: flex;
    align-items: center;
    color: white;
    text-decoration: none;
    font-size: 18px;
    padding: 15px;
}

    .navbar-brand img {
        height: 30px;
        margin-right: 10px;
    }

.navbar-nav .nav-link {
    color: #fff !important;
}

    .navbar-nav .nav-link:hover {
        color: #f8f9fa !important;
    }

